metadataPackage_1593448409706/objects/Object_Tag__c.object
<CustomObject>
    <description>Captures notation/application of a Tag to a particular Object record. Junction object b/w Tag and other objects.</description>
    <label>Object Tag</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Object Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Tag</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Object Tag</relationshipLabel>
        <relationshipName>Object_Tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Current&quot;</defaultValue>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Object Tag</relationshipLabel>
        <relationshipName>Object_Tag</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>